compiler/toc-hir-lowering/tests/snapshots/lowering__lower_enum_type-6.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : enum(a)"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..16): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..16): []
        StmtItem@(FileId(1), 0..16): ItemId(0)
          Type@(FileId(1), 0..16): "_"@(FileId(1), 5..6)
            Enum@(FileId(1), 9..16): "_"@(FileId(1), 9..16) [ a ]

