compiler/toc-hir-lowering/tests/snapshots/lowering__lower_enum_type.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : enum(a)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..16): "<root>"@(dummy)
      StmtBody@(src/main.t:0..16): []
        StmtItem@(src/main.t:0..16): ItemId(0)
          Type@(src/main.t:0..16): "_"@(src/main.t:5..6)
            Enum@(src/main.t:9..16): "_"@(src/main.t:9..16) [ a ]
