compiler/toc-hir-lowering/tests/snapshots/lowering__lower_exit_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: loop exit end loop
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..18): "<root>"@(dummy)
      StmtBody@(src/main.t:0..18): []
        Loop@(src/main.t:0..18)
          Exit@(src/main.t:5..9)
