compiler/toc-hir-lowering/tests/snapshots/lowering__lower_for_stmt.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "for : 1 .. 10 end for"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..21): "<root>"@(dummy)
      StmtBody@(src/main.t:0..21): []
        For@(src/main.t:0..21): explicit
          Literal@(src/main.t:6..7): Integer(1)
          Literal@(src/main.t:11..13): Integer(10)
