compiler/toc-hir-lowering/tests/snapshots/lowering__lower_formals_cheat_attr.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "proc u (j : cheat int) end u"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..28): "<root>"@(dummy)
      StmtBody@(src/main.t:0..28): []
        StmtItem@(src/main.t:0..28): ItemId(0)
          Subprogram@(src/main.t:0..28): "u"@(src/main.t:5..6) [cheat "j"@(src/main.t:8..9)]
            Primitive@(src/main.t:18..21): Int
            Void@(src/main.t:0..22)
            StmtBody@(src/main.t:23..23): ["j"@(src/main.t:8..9)]
