compiler/toc-hir-lowering/tests/snapshots/lowering__lower_function_def-10.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: fcn end
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..7): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..7): []
        StmtItem@(FileId(1), 0..7): ItemId(0)
          Subprogram@(FileId(1), 0..7): "<unnamed>"@(FileId(1), 0..7)
            StmtBody@(FileId(1), 4..4): []
error at (FileId(1), 4..7): unexpected token
| error for (FileId(1), 4..7): expected identifier, but found `end`

