compiler/toc-hir-lowering/tests/snapshots/lowering__lower_function_def-2.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "\n    function empty_params() : int\n    end empty_params\n    "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..60): "<root>"@(dummy)
      StmtBody@(src/main.t:5..55): []
        StmtItem@(src/main.t:5..55): ItemId(0)
          Subprogram@(src/main.t:5..55): "empty_params"@(src/main.t:14..26) []
            Primitive@(src/main.t:31..34): Int
            StmtBody@(src/main.t:39..39): []
