compiler/toc-hir-lowering/tests/snapshots/lowering__lower_function_def-9.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: fcn end bloop
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        StmtItem@(FileId(1), 0..13): ItemId(0)
          Subprogram@(FileId(1), 0..13): "<unnamed>"@(FileId(1), 0..13)
            StmtBody@(FileId(1), 4..4): []
error in file FileId(1) at 4..7: unexpected token
| error in file FileId(1) for 4..7: expected identifier, but found `end`

